--- a/res/style.css
+++ b/res/style.css
@@ -53,6 +53,10 @@ body {
     color: #25cae0;
 }
 
+.project{
+    transition: visibility 0s linear 0.3s, opacity 0.3s linear;
+    opacity: 0;
+}
 .project:hover {
     background-color: rgb(41, 41, 41);
     cursor: pointer;
@@ -84,6 +88,10 @@ body {
     width: 70%;
 }
 
+.hidden{
+    visibility: hidden;
+    transition: visibility 0.5s ease;;
+}
 
 @media (max-width: 767px) {
     .headerbox {
