--- a/res/style.css
+++ b/res/style.css
@@ -5,128 +5,155 @@
     color: #fff;
 } */
 body {
-    background: rgb(46, 46, 46);  
-    /* background: -webkit-linear-gradient(to right, #243B55, #141E30);   */
-    /* background: linear-gradient(to right, #1d8d9c, #001b1d);  */
-    /* background: linear-gradient(to right, #00efd1, #00acea);  */
-    /* background: linear-gradient(to right, #00a58f, #007daa);  */
-    /* background: linear-gradient(to right, #0a8270, #7cff6b);  */
-    /* background: linear-gradient(to right, #353a5f, #9ebaf3); */
-    /* background: -webkit-linear-gradient(to right, #243B55, #141E30);  
+  background: rgb(46, 46, 46);
+  /* background: -webkit-linear-gradient(to right, #243B55, #141E30);   */
+  /* background: linear-gradient(to right, #1d8d9c, #001b1d);  */
+  /* background: linear-gradient(to right, #00efd1, #00acea);  */
+  /* background: linear-gradient(to right, #00a58f, #007daa);  */
+  /* background: linear-gradient(to right, #0a8270, #7cff6b);  */
+  /* background: linear-gradient(to right, #353a5f, #9ebaf3); */
+  /* background: -webkit-linear-gradient(to right, #243B55, #141E30);  
     background: linear-gradient(to right, #326312, #001d05);  */
-    color: #fff;
+  color: #fff;
 }
 .btn-circle {
-    width: 40px;
-    height: 40px;
-    padding: 6px 0px;
-    border-radius: 20px;
-    text-align: center;
-    font-size: 12px;
-    line-height: 1.42857;
+  width: 40px;
+  height: 40px;
+  padding: 6px 0px;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
 }
-.link{
-    /* color: rgb(109, 179, 5); */
-    color: rgb(66, 242, 255);
-    text-decoration: none; 
+.link {
+  /* color: rgb(109, 179, 5); */
+  color: rgb(66, 242, 255);
+  text-decoration: none;
 }
-.link:hover{
-    color: rgb(66, 242, 255);
-    text-decoration: underline; 
+.link:hover {
+  color: rgb(66, 242, 255);
+  text-decoration: underline;
 }
-.righttext{
-    font-size: small;
+.righttext {
+  font-size: small;
 }
-.cir-btn{
-    background-color: rgb(55, 211, 223);
-    /* background-color: rgb(109, 179, 5); */
-    font-size: large
+.cir-btn {
+  background-color: rgb(55, 211, 223);
+  /* background-color: rgb(109, 179, 5); */
+  font-size: large;
 }
-.cir-btn:hover{
-    background-color: rgb(23, 133, 141);
+.cir-btn:hover {
+  background-color: rgb(23, 133, 141);
 }
-.sub-header{
-    font-size: larger;
-    color: #25cae0;
+.sub-header {
+  font-size: larger;
+  color: #25cae0;
 }
-.project-name{
-    color: #25cae0;
+.project-name {
+  color: #25cae0;
 }
 
 .project:hover {
-    background-color: rgb(41, 41, 41);
-    cursor: pointer;
+  background-color: rgb(41, 41, 41);
+  cursor: pointer;
 }
 
 .project-btn {
-    height: 40px;
-    width: 40px;
-    background-color: rgba(22, 209, 223,0.8);
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(22, 209, 223, 0.8);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.project-btn-area{
-    position: absolute;
-    /* top: 70%; */
-    bottom: 10%;
-    right: 0;
+.project-btn-area {
+  position: absolute;
+  /* top: 70%; */
+  bottom: 10%;
+  right: 0;
 }
 
-.loadmore-btn-area{
-    position: relative;
-    /* top: 70%; */
-    bottom: 0;
-    width: 100%;
-
+.loadmore-btn-area {
+  position: relative;
+  /* top: 70%; */
+  bottom: 0;
+  width: 100%;
 }
 
-.loadmore-btn{
-    border: 1px #25cae0 solid;
-    border-radius: 5px;
-    color: #25cae0;
-    background: rgba(0, 0, 0,0);
+.loadmore-btn {
+  border: 1px #25cae0 solid;
+  border-radius: 5px;
+  color: #25cae0;
+  background: rgba(0, 0, 0, 0);
 }
 
-.loadmore-btn:hover{
-    border: 1px #25cae0 solid;
-    border-radius: 5px;
-    color: black;
-    background: #25cae0;
+.loadmore-btn:hover {
+  border: 1px #25cae0 solid;
+  border-radius: 5px;
+  color: black;
+  background: #25cae0;
 }
 
-.download-project-btn{
-    display: flex;
-    justify-content: end;
+.download-project-btn {
+  display: flex;
+  justify-content: end;
 }
 
-.project-img-auto-width{
-    width: 70%;
+.project-img-auto-width {
+  width: 70%;
 }
 
-.project-panel{
-    height: 800px;
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    transition: all .5s ease;
+.project-panel {
+  height: 800px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
+.tag {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.intern {
+  background: #00788d;
+  color: #fff;
+}
+
+.student {
+  background: #df7f02;
+  color: #fff;
+}
+
+.clickNext {
+  background: #df1c02;
+  color: #fff;
+}
+
+.env-title:hover {
+  color: rgb(189, 189, 189);
+  text-decoration: inherit;
+}
+
+.env-title {
+  color: rgb(189, 189, 189);
+  text-decoration: inherit;
+}
 
 @media (max-width: 767px) {
-    .headerbox {
-        display: flex;
-        justify-content: center;
-    }
-    .download-project-btn{
-        justify-content: start;
-    }
+  .headerbox {
+    display: flex;
+    justify-content: center;
+  }
+  .download-project-btn {
+    justify-content: start;
+  }
 }
 
-
 @media (max-width: 1199px) {
-    .project-img-auto-width{
-        width: 100%;
-    }
+  .project-img-auto-width {
+    width: 100%;
+  }
 }
